--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 				<div id="sizecontroller"></div>
 			</div>
 		</div>
-		<div id="erase" class="options">Select Eraser</div>
-		<div id="pencolor" class="options">Select Pen Color:</div>		
-		<input class='jscolor' value="#000000"></input>
-		<div id="backgroundcolor" class="options">Select Background Color</div>
-		<input class="jscolor" value="#ffffff" onchange="backgroundchange()"></input>
-			<div id="clear" class="options">Clear Canvas</div>
+		<div id="clear" class="options">Clear Canvas</div>
+		<div id="menu">
+			<ul>
+			<li><div id="menubutton">Menu</div></li><br>
+			<li><div id="erase" class="options">Select Eraser</div></li><br>
+			<li><div id="pencolor" class="options">Select Pen Color</div></li><br>		
+			<li><input class='jscolor' value="#000000"></input></li><br>
+			<li><div id="backgroundcolor" class="options">Select Background Color</div></li><br>
+			<li><input class="jscolor" value="#ffffff" onchange="backgroundchange()"></input></li>
+			</ul>
+		</div>	
 		</div>
 		<div id="fontsize"></div>
 	<canvas id="canvas"></canvas>
