--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 				<div id="sizecontroller"></div>
 			</div>
 		</div>
-		<div id="clear" class="options">Clear Canvas</div>
 		<div id="menu">
 			<ul>
 			<li><div id="menubutton">Menu</div></li><br>
@@ -23,7 +22,8 @@
 			<li><div id="pencolor" class="options">Select Pen Color</div></li><br>		
 			<li><input class='jscolor' value="#000000"></input></li><br>
 			<li><div id="backgroundcolor" class="options">Select Background Color</div></li><br>
-			<li><input class="jscolor" value="#ffffff" onchange="backgroundchange()"></input></li>
+			<li><input class="jscolor" value="#ffffff" onchange="backgroundchange()"></input></li><br>
+			<li><div id="clear" class="options">Clear Canvas</div></li>
 			</ul>
 		</div>	
 		</div>
