--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <script src='./jscolor.js'></script>
 	<div id="header">
 		<div id="sizecontainer" class="options">
-			<div id="sizetext">Select Size</div>
+			<div id="sizetext">Pen Size</div>
 			<div id="sizechange">
 				<div id="sizecontroller"></div>
 			</div>
 		</div>
 		<div id="menu">
 			<ul>
-			<li><div id="menubutton">Menu</div></li><br>
+			<li><div id="menubutton"><span>Menu</span></div></li><br>
 			<li><div id="erase" class="options">Select Eraser</div></li><br>
 			<li><div id="pencolor" class="options">Select Pen Color</div></li><br>		
 			<li><input class='jscolor' value="#000000"></input></li><br>
-			<li><div id="backgroundcolor" class="options">Select Background Color</div></li><br>
+			<li><div id="backgroundcolor" class="options">Select Background <br> Color</div></li><br>
 			<li><input class="jscolor" value="#ffffff" onchange="backgroundchange()"></input></li><br>
 			<li><div id="clear" class="options">Clear Canvas</div></li>
 			</ul>
