--- a/doodle/doodle.html
+++ b/doodle/doodle.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Paint</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="doodle.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -30,5 +30,5 @@
 		<div id="fontsize"></div>
 	<canvas id="canvas"></canvas>
 </body>
-<script src="index.js"></script>
+<script src="doodle.js"></script>
 </html>
