--- a/editor/index.html
+++ b/editor/index.html
@@ -14,6 +14,7 @@
     <div class='navbar-header'>
         <a class='navbar-brand' href='#'>Editor</a>
     </div>
+    <button id="clearEditor" class='btn btn-danger pull-right' onclick="sessionStorage.clear();location.reload();">Clear Editor</button>
 </nav>
 <br><br>
 <center>
@@ -31,12 +32,11 @@
     </div>
 </center>
 <button class='btn btn-primary' id="publish" onclick='preview()'>Publish</button>
+<hr>
 <center>
    <div id="displayText">
-       <div id="preview">Preview</div>
-       <hr>
-       <div id="displayTitle">Title</div>
-       <div id="displayContent">this is the content</div>
+       <div id="preview">Links</div>
+       <div id="links"></div>
    </div>
 </center>
 <script src='./javascript/index.js'></script>
