--- a/editor/index.html
+++ b/editor/index.html
@@ -30,9 +30,9 @@
         <div class='title' contenteditable='true' data-placeholder="Give your story a Title"></div>
         <div class='content' contenteditable='true' data-placeholder='Tell your tale....'></div>
     </div>
-
-    </center>
-    <button class='btn btn-primary' id="publish" onclick='done()'>Done</button>
+</center>
+<button class='btn btn-primary' id="done" onclick='done()'>Done</button>
+<button class='btn btn-warning' id="edit" onclick='location.reload()'>Back To Edit Mode</button>
 <center>
    <div id="displayText">
        <hr>
