--- a/editor/index.html
+++ b/editor/index.html
@@ -17,6 +17,7 @@
     <button id="clearEditor" class='btn btn-danger pull-right' onclick="sessionStorage.clear();location.reload();">Clear Editor</button>
     <button id="previewButton" class='btn btn-success pull-right' onclick='preview()'>Preview</button>
     <button id="backToEditor" class='btn btn-primary pull-right' onclick='location.reload()'>Back To Editor</button>
+    <button id="replace" class='btn btn-info pull-right' onclick='convert()'>Replace digits with length 4 </button>
 </nav>
 <br><br>
 <center>
@@ -51,5 +52,6 @@
 <script src='./javascript/index.js'></script>
 <script src='./javascript/tooltip.js'></script>
 <script src='./javascript/preview.js'></script>
+<script src='./javascript/replaceWords.js'></script>
 </body>
 </html>
