--- a/svg/circleLoader/index.html
+++ b/svg/circleLoader/index.html
@@ -10,6 +10,8 @@
 		width:100%;
 		height:100vh;
 		margin:0px;
+		overflow-y:hidden;
+		background:#000A1C;
 	}
 	.loader {
 		width:30%;
@@ -17,7 +19,7 @@
 		margin-top:20vh;
 		background:url('./circleLoader.svg');
 		background-repeat: no-repeat;
-		background-size:100% 100vh;
+		background-size:100% 60vh;
 	}
 </style>
 <center>
