add landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
 	</div>
 	<center>
 		<div class='panelContainer'>
-			<div class='panel home'>
+			<div class='panel home activePanel'>
+				<div class='homeDescription'>
+					Hi, My name is Jasmeet Singh. I am a final year undergraduate student at <a href='http://www.nsit.ac.in/' target='_blank'><kbd>NSIT, Delhi University</kbd></a>. <br>This website serves as a landing page to show all my projects served using github pages, you can click <a href='http://www.jasmeetsinghsaini.me/' target='_blank'><kbd>here</kbd></a> to go to my complete portfolio or explore my projects and svg animations using the above tabs.
+					<br><br>Connect with me using following mediums.
+				</div><hr>
+				<div class='connect'>
+					<a href='https://www.facebook.com/jasmeet.singh.9461' target='_blank'><div class='connectElement fa fa-2x fa-facebook'></div></a>
+					<a href='https://github.com/JSSaini07' target='_blank'><div class='connectElement fa fa-2x fa-github'></div></a>
+					<a href='https://twitter.com/JSSaini07' target='_blank'><div class='connectElement fa fa-2x fa-twitter'></div></a>
+					<a href='http://codepen.io/JSSaini07/' target='_blank'><div class='connectElement fa fa-2x fa-codepen'></div></a>
+					<a href='https://angel.co/jasmeet-singh-16' target='_blank'><div class='connectElement fa fa-2x fa-angellist'></div></a>
+				</div>
 			</div>
 			<div class='panel projects'>
 				<div class='projectContainer' targetLocation='randomQuoteGenerator'>
@@ -51,7 +62,7 @@
 					<div class='projectDescription'>A web applicaion that shows the temprature at user's location.</div>
 				</div>
 			</div>
-			<div class='panel svg activePanel'>
+			<div class='panel svg'>
 				<div class='svgContainer' targetLocation='CaptainAmerica'>
 					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/CaptainAmerica/captainAmerica.svg');background-size:300px 160px"></div>
 					<div class='svgName'>Captain America Shield</div>
