--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JSSaini07 - Jasmeet Singh Saini</title>
 	<link rel="stylesheet" href="./dependencies/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/css/bootstrap.min.css"></link>
 	<link rel="stylesheet" href="./dependencies/font-awesome-4.6.3/font-awesome-4.6.3/css/font-awesome.min.css"></link>
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="./dependencies/index.css"></link>
 	<link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 </head>
 <body>
 	<div class='header'>
