scale background images

--- a/index.html
+++ b/index.html
@@ -40,54 +40,54 @@
 			</div>
 			<div class='panel projects'>
 				<div class='projectContainer' targetLocation='randomQuoteGenerator'>
-					<div class='projectImage' style="background:url('http://oi68.tinypic.com/2mzcv9e.jpg');background-size:300px 160px"></div>
+					<div class='projectImage' style="background:url('http://oi68.tinypic.com/2mzcv9e.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Random Quote Generator</div>
 					<div class='projectDescription'>An application that shows random quotes with a button to directly tweet the quote.</div>
 				</div>
 				<div class='projectContainer' targetLocation='editor'>
-					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2qkuuz8.jpg');background-size:300px 160px"></div>
+					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2qkuuz8.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Text Editor</div>
 					<div class='projectDescription'>An application using which a user can write a story. Eavh story will hav a title and its body, the body will consist of multiple paragraphs and formatting.</div>
 				</div>
 				<div class='projectContainer' targetLocation='doodle'>
-					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2my54l2.jpg');background-size:300px 160px"></div>
+					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2my54l2.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Doodle Pad</div>
 					<div class='projectDescription'>A simple canvas in HTML5 which allows the user to draw anything :)</div>
 				</div>
 				<div class='projectContainer' targetLocation='wikipediaViewer'>
-					<div class='projectImage' style="background:url('http://oi66.tinypic.com/15u0wl.jpg');background-size:300px 160px"></div>
+					<div class='projectImage' style="background:url('http://oi66.tinypic.com/15u0wl.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Wikipedia Viewer</div>
 					<div class='projectDescription'>An application using which a user can search wikipedia articles by keywords.Clicking the results will take the user to corresponding wikipedia article.</div>
 				</div>
 				<div class='projectContainer' targetLocation='localWeatherApplication'>
-					<div class='projectImage' style="background:url('http://oi66.tinypic.com/2637r89.jpg');background-size:300px 160px"></div>
+					<div class='projectImage' style="background:url('http://oi66.tinypic.com/2637r89.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Local Weather Application</div>
 					<div class='projectDescription'>A web applicaion that shows the temprature at user's location.</div>
 				</div>
 			</div>
 			<div class='panel svg'>
 				<div class='svgContainer' targetLocation='CaptainAmerica'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/CaptainAmerica/captainAmerica.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/CaptainAmerica/captainAmerica.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>Captain America Shield</div>
 				</div>
 				<div class='svgContainer' targetLocation='TheFlash'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/TheFlash/flash.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/TheFlash/flash.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>The Flash</div>
 				</div>
 				<div class='svgContainer' targetLocation='ThorHammer'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/ThorHammer/thorHammer.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/ThorHammer/thorHammer.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>Thor's Hammer</div>
 				</div>
 				<div class='svgContainer' targetLocation='circleLoader'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/circleLoader/circleLoader.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/circleLoader/circleLoader.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>Circle Loader</div>
 				</div>
 				<div class='svgContainer' targetLocation='shapeShift'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/shapeShift/shapeShift.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/shapeShift/shapeShift.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>Shape Shift</div>
 				</div>
 				<div class='svgContainer' targetLocation='rollBox'>
-					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/rollBox/rollBox.svg');background-size:300px 160px"></div>
+					<div class='svgImage' style="background:url('http://jssaini07.github.io/svg/rollBox/rollBox.svg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='svgName'>Roll Box</div>
 				</div>
 		</div>
