--- a/TodoApp-React/index.html
+++ b/TodoApp-React/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TodoApp-React</title>
+	<link href="https://fonts.googleapis.com/css?family=Molle:400i|Reem+Kufi" rel="stylesheet">	
 	<link rel="stylesheet" type="text/css" href="index.css"></link>
 	<script src="https://unpkg.com/react@15.4.0/dist/react.js"></script>
 	<script src="https://unpkg.com/react-dom@15.4.0/dist/react-dom.js"></script>
 	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
-	<div id="root"></div>
+<center>
+	<div class='header'>Todo App</div>
+	<div id="root" class="board"></div>
+</center>
 </body>
 <script src="index.js" type="text/babel"></script>
 </html>
