--- a/TodoApp-React/index.html
+++ b/TodoApp-React/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>TodoApp-React</title>
 	<link href="https://fonts.googleapis.com/css?family=Molle:400i|Reem+Kufi" rel="stylesheet">	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="index.css"></link>
 	<script src="https://unpkg.com/react@15.4.0/dist/react.js"></script>
 	<script src="https://unpkg.com/react-dom@15.4.0/dist/react-dom.js"></script>
