--- a/TodoApp-React/index.html
+++ b/TodoApp-React/index.html
@@ -14,6 +14,11 @@
 <center>
 	<div class='header'>Todo App</div>
 	<div id="root" class="board"></div>
+	<div class="copyright">
+		<a href="http://jasmeetsinghsaini.me/" target="new"><div class="name">JSSaini07</div></a>
+		<span class="heart fa fa-heart"></span>
+		<span class="fa fa-coffee"></span>	
+	</div>
 </center>
 </body>
 <script src="index.js" type="text/babel"></script>
