--- a/TodoApp-React/index.html
+++ b/TodoApp-React/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TodoApp-React</title>
 	<link href="https://fonts.googleapis.com/css?family=Molle:400i|Reem+Kufi" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
