update profile link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<a href='https://github.com/JSSaini07' target='_blank'><div class='connectElement fa fa-2x fa-github'></div></a>
 					<a href='https://twitter.com/JSSaini07' target='_blank'><div class='connectElement fa fa-2x fa-twitter'></div></a>
 					<a href='http://codepen.io/JSSaini07/' target='_blank'><div class='connectElement fa fa-2x fa-codepen'></div></a>
-					<a href='https://angel.co/jasmeet-singh-16' target='_blank'><div class='connectElement fa fa-2x fa-angellist'></div></a>
+					<a href='https://angel.co/jssaini07' target='_blank'><div class='connectElement fa fa-2x fa-angellist'></div></a>
 				</div>
 			</div>
 			<div class='panel projects'>
