--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="./dependencies/font-awesome-4.6.3/font-awesome-4.6.3/css/font-awesome.min.css"></link>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="./dependencies/index.css"></link>
-	<link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet"></link>
+	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet"></link>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet"></link>
 </head>
 <body>
 	<div class='header'>
