--- a/index.html
+++ b/index.html
@@ -39,10 +39,20 @@
 				</div>
 			</div>
 			<div class='panel projects'>
+				<div class='projectContainer' targetLocation='weatherApp'>
+					<div class='projectImage' style="background:url('http://oi64.tinypic.com/2dpcls.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
+					<div class='projectName'>Weather Application(ReactJS)</div>
+					<div class='projectDescription'>An application that give user the capability to search any city and see the temprature, pressure and humidity in graphical format.</div>
+				</div>
 				<div class='projectContainer' targetLocation='randomQuoteGenerator'>
-					<div class='projectImage' style="background:url('http://oi68.tinypic.com/2mzcv9e.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
+					<div class='projectImage' style="background:url('http://oi66.tinypic.com/t6b6mg.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Random Quote Generator</div>
 					<div class='projectDescription'>An application that shows random quotes with a button to directly tweet the quote.</div>
+				</div>
+				<div class='projectContainer' targetLocation='youtube-search-react'>
+					<div class='projectImage' style="background:url('http://oi66.tinypic.com/fw269f.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
+					<div class='projectName'>Youtube Live Search(React)</div>
+					<div class='projectDescription'>An application that integrates with youtube and lets the user search a video, the list is updated as the user types.</div>
 				</div>
 				<div class='projectContainer' targetLocation='editor'>
 					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2qkuuz8.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
