--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -13,13 +13,15 @@
 <center>		
 	<canvas id="canvas"></canvas>
 	<div class="quoteContainer">
-		<div class="quoteText"></div><br>
-		<div class='quoteAuthor'>
-			<div class='dash'></div>&nbsp;&nbsp;
-			<div class='name'></div>
-		</div><br><br>
-		<div class='tweet fa fa-2x fa-twitter-square' title='Tweet!'></div>
-		<div class='next fa fa-2x fa-arrow-right' title='Next'></div>
+		<div class="content">
+			<div class="quoteText"></div><br>
+			<div class='quoteAuthor'>
+				<div class='dash'></div>&nbsp;&nbsp;
+				<div class='name'></div>
+			</div><br><br>
+			<div class='tweet fa fa-2x fa-twitter-square' title='Tweet!'></div>
+			<div class='next fa fa-2x fa-arrow-right' title='Next'></div>
+		</div>
 	</div>
 </center>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
