--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class='projectContainer' targetLocation='editor'>
 					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2qkuuz8.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
 					<div class='projectName'>Text Editor</div>
-					<div class='projectDescription'>An application using which a user can write a story. Eavh story will hav a title and its body, the body will consist of multiple paragraphs and formatting.</div>
+					<div class='projectDescription'>An application using which a user can write a story. Each story will hav a title and its body, the body will consist of multiple paragraphs and formatting.</div>
 				</div>
 				<div class='projectContainer' targetLocation='doodle'>
 					<div class='projectImage' style="background:url('http://oi67.tinypic.com/2my54l2.jpg');background-size:100% 160px;background-repeat: no-repeat;"></div>
