add rain.js as background

--- a/index.html
+++ b/index.html
@@ -14,23 +14,26 @@
   <title>JSSaini07 - Jasmeet Singh Saini</title>
 </head>
 <body>
-  <div id="intro-section">
-      <div id="intro-box">
+<div id="intro-section">
+    <div id="canvas-container">
+        <canvas id="rain"></canvas>
+    </div>
+    <div id="intro-box">
         <div id="intro-text">
           Hello, I'm Jasmeet Singh
         </div>
-        <div id="intro-interest-container">
-          <span class="intro-interest intro-interest1">Full Stack Web Developer</span>
-          <span class="intro-interest intro-interest2">Software Engineer</span>
-          <span class="intro-interest intro-interest3">Machine Learning Enthusiast</span>
+          <div id="intro-interest-container">
+            <span class="intro-interest intro-interest1">Full Stack Web Developer</span>
+            <span class="intro-interest intro-interest2">Software Engineer</span>
+            <span class="intro-interest intro-interest3">Machine Learning Enthusiast</span>
         </div>
-        <br>
-        <div id="intro-button">
-          <svg id="intro-svg">
+          <br>
+          <div id="intro-button">
+            <svg id="intro-svg">
             <rect x="0" y="0" fill="none" stroke="#fff" width="170" height="45"></rect>
           </svg>
-          View my work
-          <i class="fas fa-arrow-right intro-button-arrow"></i>
+            View my work
+            <i class="fas fa-arrow-right intro-button-arrow"></i>
         </div>
       </div>
   </div>
@@ -52,70 +55,70 @@
       <div class="about-me">I am a web enthusiast, i love creating web apps from scratch and implementing new features in existing ones.I also participate in various competitive programming contests.</div>
     </div>
     <div class="right-content">
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">Javascript</div>
         <div class="skill-value" value="80">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">Python</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">Jquery</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">NodeJS</div>
         <div class="skill-value" value="70">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">C++</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">React</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">Redux</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">HTML</div>
         <div class="skill-value" value="70">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">CSS</div>
         <div class="skill-value" value="70">
           <div class="skill-value-fill"></div>
           <div class="skill-value-fill-name"></div>
         </div>
       </div>
-      <div class="skill-container">
+      <div class="skill-container clearfix">
         <div class="skill-name">Bootstrap</div>
         <div class="skill-value" value="60">
           <div class="skill-value-fill"></div>
@@ -366,5 +369,6 @@
 </body>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="bootstrap-4.0.0/js/bootstrap.min.js"></script>
+<script src="js/rain.js"></script>
 <script src="js/main.js"></script>
 </html>
