--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
         <div class="project-technology" data-filter="ChromeExtension">Chrome Extension</div>
       </div>
       <div id="projects-content-container">
-        <a href="https://jssaini07.github.io/weatherApp" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://jssaini07.github.io/weatherApp" target="new">        
             <div class="project-name">Weather Application</div>
             <div class="project-thumbnail" style="background:url('./images/weatherApp.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A web application that gives user the capability to search any city and see the temprature, pressure and humidity in graphical format.</div>
@@ -211,10 +210,8 @@
               <div class="tag">Redux</div>
               <div class="tag">Javascript</div>
             </div>
-          </div>
         </a>
-        <a href="http://compilide.herokuapp.com/" target="new">
-          <div class="project-item">
+        <a class="project-item" href="http://compilide.herokuapp.com/" target="new">          
             <div class="project-name">Compiler/IDE</div>
             <div class="project-thumbnail" style="background:url('./images/compilide.png')"></div>
             <div class="project-description">An online compiler and code editor that allows a user to edit and compile their code online. It integrates with HackerEath's API to compile and run the code and generates a unique link for each code. Users can register/login and code history for each user is maintained.</div>
@@ -223,20 +220,16 @@
               <div class="tag">Javascript</div>
               <div class="tag">MongoDB</div>
             </div>
-          </div>
         </a>
-        <a href="https://github.com/JSSaini07/NeuralNetwork-DigitRecognition" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://github.com/JSSaini07/NeuralNetwork-DigitRecognition" target="new">
             <div class="project-name">Digit Recognition - Neural Network</div>
             <div class="project-thumbnail" style="background:url('./images/neuralNetwork.png')"></div>
             <div class="project-description">A deep learning artificial neural network (ANN) in python. The network is trained using 40,000 20X20 size images provided by MNIST. After complete training the neural net is found to work with 80-90% efficiency. </div>
             <div class="tags-container">
               <div class="tag">Python</div>
             </div>
-          </div>
         </a>
-        <a href="https://groupchatnode.herokuapp.com/" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://groupchatnode.herokuapp.com/" target="new">
             <div class="project-name">Group Chat Application</div>
             <div class="project-thumbnail" style="background:url('./images/groupchatnode.png');background-size: 100% 400px;"></div>
             <div class="project-description">A chat app created using NodeJS with expressJS as a web framework and websockets. It allows a user to either create a new room or join an existing room. The users in a room are allowed to chat. Each group has an admin that can delete the room any time he wants.</div>
@@ -246,10 +239,8 @@
               <div class="tag">MongoDB</div>
               <div class="tag">Websockets</div>
             </div>
-          </div>
         </a>
-        <a href="http://codepractice.herokuapp.com/" target="new">
-          <div class="project-item">
+        <a class="project-item" href="http://codepractice.herokuapp.com/" target="new">          
             <div class="project-name">Code Practice</div>
             <div class="project-thumbnail" style="background:url('./images/codePractice.png');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A web application which allows the user to simulate a coding test environment. User can generate a test and choose the number of programming questions from each difficulty level, questions are then scraped from codechef and user is given a final score on submission of the test.</div>
@@ -257,30 +248,24 @@
               <div class="tag">NodeJS</div>
               <div class="tag">Javascript</div>
             </div>
-          </div>
         </a>
-        <a href="https://jssaini07.github.io/doodle" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://jssaini07.github.io/doodle" target="new">
             <div class="project-name">Paint App</div>
             <div class="project-thumbnail" style="background:url('./images/paint.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A simple canvas in HTML5 which allows the user to draw anything.</div>
             <div class="tags-container">
               <div class="tag">Javascript</div>
             </div>
-          </div>
         </a>
-        <a href="https://github.com/JSSaini07/CodechefScraper" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://github.com/JSSaini07/CodechefScraper" target="new">
             <div class="project-name">Codechef Scraper</div>
             <div class="project-thumbnail" style="background:url('./images/codechefScraper.png');"></div>
             <div class="project-description">A script in python which scrapes all the codechef submissions of a given user and stores them in different folders depending on question type (contents/non-contest)</div>
             <div class="tags-container">
               <div class="tag">Python</div>
             </div>
-          </div>
         </a>
-        <a href="https://jssaini07.github.io/editor" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://jssaini07.github.io/editor" target="new">
             <div class="project-name">Text Editor</div>
             <div class="project-thumbnail" style="background:url('./images/textEditor.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">An application using which a user can write a story. Each story will hav a title and its body, the body will consist of multiple paragraphs and formatting.</div>
@@ -290,10 +275,8 @@
               <div class="tag">CSS3</div>
               <div class="tag">HTML5</div>
             </div>
-          </div>
         </a>
-        <a href="http://jssradio.herokuapp.com/" target="new">
-          <div class="project-item">
+        <a class="project-item" href="http://jssradio.herokuapp.com/" target="new">
             <div class="project-name">Radio App</div>
             <div class="project-thumbnail" style="background:url('./images/radio.png');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A web application with a set of songs playing randomly, music plays in sync with all the devices that have the website opened. Also added some visualization.</div>
@@ -301,10 +284,8 @@
               <div class="tag">NodeJS</div>
               <div class="tag">Javascript</div>
             </div>
-          </div>
         </a>
-        <a href="https://github.com/JSSaini07/clickBait-Destroyer" target="new">
-          <div class="project-item">
+        <a class="project-item" href="https://github.com/JSSaini07/clickBait-Destroyer" target="new">
             <div class="project-name">Clickbait Destroyer</div>
             <div class="project-thumbnail" style="background:url('./images/clickbaitDestroyer.png');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A chrome extension that adds a clickbait destroy button in facebook page feed, The purpose of this button is to fetch the bait content and put it in the comment box.</div>
@@ -312,7 +293,6 @@
               <div class="tag">Javascript</div>
               <div class="tag">ChromeExtension</div>
             </div>
-          </div>
         </a>
       </div>
     </div>
@@ -421,7 +401,7 @@
                 <input type="text"/>
             </div>
           </div><br>
-          <div class="field-group" style="width: 94%;">
+          <div class="field-group" style="width: 92%;">
             <div class="label">Message</div>
             <div class="value">
                 <textarea type="text"></textarea>
