--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130273208-1"></script>
   <script>
+    var i=0;
+    while(i<10000){
+      console.log('here');
+      i=i+1;
+    }
+  </script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
