fix contact form styles

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <textarea type="text" id="contact-form-content"></textarea>
             </div>
           </div>
-          <div id="submit-contact-form">Submit</div>
+          <div id="submit-contact-form">Submit</div><br>
           <div id="submit-contact-form-helper-text"></div>
         </div>
       </div>
