move inline styles

--- a/index-dev.html
+++ b/index-dev.html
@@ -12,7 +12,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./build/images/favicon.png"/>
-  <link rel="stylesheet" href="./build/css/main.min.css?__inline=true">
   <title>Jasmeet Singh | Fullstack Developer</title>
 </head>
 <body>
@@ -430,5 +429,6 @@
     </div>
   </div>
 </body>
-<script src="./build/js/main.min.js?__inline=true" defer></script>
+<link rel="stylesheet" href="./build/css/main.min.css?__inline=true">
+<script src="./build/js/main.min.js?__inline=true"></script>
 </html>
