--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="jssaini07">
+  <meta property="og:url" content="http://jasmeetsinghsaini.com"/>
+  <meta property="og:site_name" content="Jasmeet Singh (jssaini07)"/>
+  <meta property="og:title" content="Jasmeet Singh (jssaini07)"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:description" content="Jasmeet is a Fullstack Developer with interest in Machine Learning and Game Development">
+  <meta name="Description" content="Jasmeet is a Fullstack Developer with interest in Machine Learning and Game Development">
+  <meta name="keywords" content="jasmeet, jasmeet singh, jasmeet singh saini, jssaini07, NSIT, Sumo Logic, Sumologic, Sentieo, Viraltag, Github, API, Javascript, Chrome Extension">
   <link rel="shortcut icon" type="image/png" href="./build/images/favicon.png"/>
   <title>Jasmeet Singh | Fullstack Developer</title>
 </head>
