add facebook chat thread project

--- a/index-dev.html
+++ b/index-dev.html
@@ -206,6 +206,21 @@
         <div class="project-technology" data-filter="ChromeExtension">Chrome Extension</div>
       </div>
       <div id="projects-content-container">
+        <a class="project-item" href="https://github.com/JSSaini07/facebook-chat-clone" target="new">        
+          <div class="project-name">Facebook Comment Thread</div>
+          <div class="project-thumbnail" style="background:url('./build/images/fcc.png');background-size: 100%;background-repeat: no-repeat;"></div>
+          <div class="project-description">A web application that clones the facebook chat thread. Allows the user to comment on the post or reply to existing comments on the post. Uses Websockets for real time update.</div>
+          <div class="tags-container">
+            <div class="tag">ReactJS</div>
+            <div class="tag">Redux</div>
+            <div class="tag">NodeJS</div>
+            <div class="tag">Javascript</div>
+            <div class="tag">Websockets</div>
+            <div class="tag">MongoDB</div>
+            <div class="tag">CSS3</div>
+            <div class="tag">HTML5</div>
+          </div>
+        </a>
         <a class="project-item" href="https://jssaini07.github.io/weatherApp" target="new">        
             <div class="project-name">Weather Application</div>
             <div class="project-thumbnail" style="background:url('./build/images/weatherApp.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
