--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="tag">HTML5</div>
           </div>
         </a>
-        <a class="project-item" href="https://jssaini07.github.io/weatherApp" target="new">        
+        <a class="project-item" href="https://jssaini07.github.io/projects/weatherApp" target="new">        
             <div class="project-name">Weather Application</div>
             <div class="project-thumbnail" style="background:url('./build/images/weatherApp.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A web application that gives user the capability to search any city and see the temprature, pressure and humidity in graphical format.</div>
@@ -269,7 +269,7 @@
               <div class="tag">Javascript</div>
             </div>
         </a>
-        <a class="project-item" href="https://jssaini07.github.io/doodle" target="new">
+        <a class="project-item" href="https://jssaini07.github.io/projects/doodle" target="new">
             <div class="project-name">Paint App</div>
             <div class="project-thumbnail" style="background:url('./build/images/paint.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">A simple canvas in HTML5 which allows the user to draw anything.</div>
@@ -294,7 +294,7 @@
             <div class="tag">Javascript</div>
           </div>
         </a>
-        <a class="project-item" href="https://jssaini07.github.io/editor" target="new">
+        <a class="project-item" href="https://jssaini07.github.io/projects/editor" target="new">
             <div class="project-name">Text Editor</div>
             <div class="project-thumbnail" style="background:url('./build/images/textEditor.jpg');background-size: 100%;background-repeat: no-repeat;"></div>
             <div class="project-description">An application using which a user can write a story. Each story will hav a title and its body, the body will consist of multiple paragraphs and formatting.</div>
