--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <div class="customTooltip customTooltipFifth">
           <div class="customTip"></div>
           <div class="details">
-            <div class="designation">Software Engineer</div>
+            <div class="designation">Software Engineer 2</div>
             <div class="company"><a href="https://www.sumologic.com/" target="new">Sumo Logic</a></div>
             <div class="time-period">June'18 - Current</div>
           </div>
@@ -385,13 +385,13 @@
     </div>
     <div id="resume-content-container">
       <div id="resume-content">
-          <a href="./JSSaini07.pdf" target="new">
+          <a href="./JasmeetSinghSaini.pdf" target="new">
             <div id="view-online">
               <svg class="svg-inline--fa fa-eye fa-w-18 fa-6x viewOnline" aria-hidden="true" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M569.354 231.631C512.969 135.949 407.81 72 288 72 168.14 72 63.004 135.994 6.646 231.631a47.999 47.999 0 0 0 0 48.739C63.031 376.051 168.19 440 288 440c119.86 0 224.996-63.994 281.354-159.631a47.997 47.997 0 0 0 0-48.738zM288 392c-75.162 0-136-60.827-136-136 0-75.162 60.826-136 136-136 75.162 0 136 60.826 136 136 0 75.162-60.826 136-136 136zm104-136c0 57.438-46.562 104-104 104s-104-46.562-104-104c0-17.708 4.431-34.379 12.236-48.973l-.001.032c0 23.651 19.173 42.823 42.824 42.823s42.824-19.173 42.824-42.823c0-23.651-19.173-42.824-42.824-42.824l-.032.001C253.621 156.431 270.292 152 288 152c57.438 0 104 46.562 104 104z"></path></svg><!-- <i class="fas fa-6x fa-eye viewOnline"></i> -->
               <span>View Online</span>
             </div>
           </a>
-          <a href="./JSSaini07.pdf" download="JSSaini07.pdf">
+          <a href="./JasmeetSinghSaini.pdf" download="JasmeetSinghSaini.pdf">
             <div id="download">
               <svg class="svg-inline--fa fa-download fa-w-16 fa-6x downloadResume" aria-hidden="true" data-prefix="fas" data-icon="download" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg><!-- <i class="fas fa-6x fa-download downloadResume"></i> -->
               <span>Download Resume</span>
